<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_250sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_dialog_value"
            android:textSize="@dimen/_14ssp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            app:boxCornerRadiusTopStart="@dimen/_20sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_dialog_edittext_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            app:boxCornerRadiusTopStart="@dimen/_20sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_dialog_edittext_number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_10sdp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/name_dialog_button_yes"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/name_dialog_button_no"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>